--- a/MovieStoreMvc/appsettings.json
+++ b/MovieStoreMvc/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conn": "data source=.; initial catalog=MovieStoreMvc; integrated security=true"
+    "connection": "Server=localhost,1433;Database=MovieStoreMvc;User Id=sa;Password=<YourStrong!Passw0rd>;"
   }
 }
 
